fix(funding): css align center

--- a/packages/frontend/src/pages/fundings/FundingsDetail.module.css
+++ b/packages/frontend/src/pages/fundings/FundingsDetail.module.css
@@ -340,6 +340,7 @@ border-bottom: 1px solid var(--border);
   font-size: 13px;
   width:100%;
   display:flex;
+  align-items: center;
   color:var(--teritary);
   background-color: var(--border);
   padding: 10px 15px;
